# claude-proxy

./: .env.example  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  ccproxy.py  ccswitch.py  config.example.toml  config.py  main.py  profiles.py  pyproject.toml
deploy/: claude-proxy.service  com.zealchaiwut.claude-proxy.plist
docs/: architecture.md  milestones.md  quickstart.md  tutorial.md  workflow.md
docs/bulk-create/: 2026-06-30-1-m0  2026-06-30-2-m1  2026-06-30-3-m2  2026-06-30-4-m3  2026-06-30-5-m4  2026-06-30-M10-capture-replay-harness.md  2026-06-30-M5-observability-cost-logging.md  2026-06-30-M6-unattended-robustness.md  2026-06-30-M7-packaging-commander-onboarding.md  README.md  (+2 more)
routers/: _proxy_utils.py  health.py  messages.py  metrics.py  models.py  passthrough.py
schemas/: anthropic.py  openai.py
scripts/: install_service.py
services/: capture.py  cost_accounting.py  metrics_collector.py  openai_sse_consumer.py  replay.py  request_logger.py  sse.py  tokenizer.py  translator.py  xml_tool_mode.py
tests/: test_cache_control__56.py  test_cache_control_passthrough__57.py  test_cache_metrics__58.py  test_capture__59.py  test_capture_proxied_exchanges__59.py  test_ccswitch__37.py  test_compare__61.py  test_correlation_headers__42.py  test_dispatch_profile__38.py  test_entrypoints__48.py  test_fastapi_skeleton__1.py  test_health.py  test_health__50.py  test_issue_24_acceptance.py  test_messages.py  test_metrics__43.py  test_openai_proxy__11.py  test_openai_sse_consumer__17.py  test_openai_sse_streaming__19.py  test_profile_resolution__36.py  test_profiles__35.py  test_proxy_extensions__4.py  test_replay__60.py  test_request_logger__40.py  test_service_install__49.py  test_sse__16.py  test_streamed_tool_call_support__25.py  test_streamed_tool_calls__25.py  test_streaming__3.py  test_thinking_mode__68.py  test_token_cost_accounting__41.py  test_token_cost_accounting_uat__41.py  test_token_drift__55.py  test_tokenizer__53.py  test_tokenizer__54.py  test_tool_result_translation__24.py  test_tools_mapping__22.py  test_translator__10.py  test_translator__9.py  test_translator_stream__18.py  (+7 more)
(+5 files in other folders)
