[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-proxy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pydantic-settings",
]

[project.scripts]
ccswitch = "ccswitch:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = [
  "main.py",
  "config.py",
  "profiles.py",
  "ccswitch.py",
  "routers",
  "services",
  "schemas",
]