[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-proxy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.scripts]
claude-proxy = "main:main"
ccswitch = "ccswitch:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = [
  "main.py",
  "config.py",
  "profiles.py",
  "ccswitch.py",
  "routers",
  "services",
  "schemas",
]